Refactor theme name to innovamed

--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,13 @@
 /*
-Theme Name: tadasm
-Theme URI: https://github.com/irmantastam/tadasm
+Theme Name: innovamed
+Theme URI: https://github.com/irmantastam/innovamed
 Author: Irmantas Tamašauskas
 Author URI: https://github.com/irmantastam
-Description: WordPress theme for tadasm website.
+Description: WordPress theme for <a href="http://innovamed.lt">innovamed.lt</a> website. Github: <a href="https://github.com/irmantastam/innovamed">irmantastam/innovamed</a>
 Version: 1.0
 Requires PHP: 7.3
 License: MIT
 License URI: https://opensource.org/licenses/MIT
 Tags: wordpress, html, javascript, sass, css, postcss, webpack, babel
-Text Domain: tadasm
+Text Domain: innovamed
 */
