Add foldable component

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,3 +14,4 @@
 @import './components/header';
 @import './components/hero-image';
 @import './components/social-links';
+@import './components/Foldable';
