--- a/src/assets/styles/components/hero-image.scss
+++ b/src/assets/styles/components/hero-image.scss
@@ -32,9 +32,9 @@
   }
 
   @media screen and (min-width: 768px) {
-    height: 450px;
-    margin: 0 -40px;
-    margin-bottom: 50px;
+    width: 100vw;
+    margin: 0 0 50px 50%;
+    transform: translateX(-50%);
 
     &__image,
     &__video {
