Add scroll behavior smooth to HTML

--- a/src/assets/styles/base/base.scss
+++ b/src/assets/styles/base/base.scss
@@ -8,6 +8,7 @@ html {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
