Don't use border for last foldable item

--- a/src/assets/styles/components/foldable.scss
+++ b/src/assets/styles/components/foldable.scss
@@ -4,6 +4,10 @@
   padding-bottom: 10px;
   border-bottom: 1px solid $color--mediumgrey;
 
+  &:last-child {
+    border: none;
+  }
+
   &__title {
     margin: 0;
     margin-bottom: 10px;
