--- a/src/assets/styles/base/base.scss
+++ b/src/assets/styles/base/base.scss
@@ -99,7 +99,14 @@ a {
   }
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .main {
+  flex: 1;
   overflow-x: hidden;
 }
 
