--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -1,7 +1,9 @@
 .header {
-  background-color: $color--white;
+  background-color: rgba(255, 255, 255, 0.95);
   border-bottom: 1px solid $color--grey;
-  padding: 20px 0;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 
   @media screen and (min-width: 768px) {
     font-size: 0;
@@ -20,13 +22,26 @@
 
     img {
       vertical-align: bottom;
+      max-width: 180px;
+
+      @media screen and (min-width: 768px) {
+        max-width: 100%;
+      }
+    }
+  }
+
+  .inner {
+    padding: 10px;
+
+    @media screen and (min-width: 768px) {
+      padding: 10px 20px;
     }
   }
 
   .nav {
     text-align: center;
     vertical-align: top;
-    margin-top: 20px;
+    margin-top: 10px;
 
     @media screen and (min-width: 768px) {
       display: inline-block;
@@ -50,7 +65,7 @@
 
       li {
         display: inline-block;
-        padding: 5px 10px;
+        padding: 4px 10px;
 
         @media screen and (min-width: 768px) {
           padding: 5px 15px;
@@ -72,6 +87,7 @@
         color: $color--darkergrey;
         position: relative;
         vertical-align: bottom;
+        font-size: 13px;
 
         img {
           vertical-align: bottom;
